<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/sliderLayout"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <ImageView
        android:id="@+id/imageOnboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_onboarding1" />

    <TextView
        android:fontFamily="@font/alata_regular"
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_title1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/txt_description1"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

</LinearLayout>